fixed little whitespace at bottom of page

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ th {
 
 #footer {
     background-color: #F7F7F7;
+    border-bottom: 1px solid #F7F7F7;
     border-top: 1px solid #E7E7E7;
     text-align: center;
     margin-top: 40px;
